--- a/client/feed.html
+++ b/client/feed.html
@@ -158,8 +158,119 @@
         </section>
     </div>
 
+
+    <section class="local-news mt-5">
+    <h4>Local News</h4>
+      
+    <div class="card-section row">
+
+        <div class="col-md-4">
+            <div class="headline row ">
+                <div class="col-md-8">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, mollitia!
+                </div>
+               <div class="col-md-4">
+                <img src="./Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg" alt="" class=" headline-img">
+               </div> 
+                <hr class="mt-3">
+        </div>
+
+        <div class="headline row ">
+            <div class="col-md-8">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, mollitia!
+            </div>
+           <div class="col-md-4">
+            <img src="./Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg" alt="" class=" headline-img">
+           </div> 
+            <hr class="mt-3">
+    </div>
+
+    <div class="headline row ">
+        <div class="col-md-8">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, mollitia!
+        </div>
+       <div class="col-md-4">
+        <img src="./Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg" alt="" class=" headline-img">
+       </div> 
+        <hr class="mt-3">
+</div>
+
+    </div>
+
+    <div class="col-md-4">
+        <div class="headline row ">
+            <div class="col-md-8">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, mollitia!
+            </div>
+           <div class="col-md-4">
+            <img src="./Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg" alt="" class=" headline-img">
+           </div> 
+            <hr class="mt-3">
+    </div>
+
+    <div class="headline row ">
+        <div class="col-md-8">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, mollitia!
+        </div>
+       <div class="col-md-4">
+        <img src="./Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg" alt="" class=" headline-img">
+       </div> 
+        <hr class="mt-3">
+</div>
+
+<div class="headline row ">
+    <div class="col-md-8">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, mollitia!
+    </div>
+   <div class="col-md-4">
+    <img src="./Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg" alt="" class=" headline-img">
+   </div> 
+    <hr class="mt-3">
+</div>
+
+</div>
+
+<div class="col-md-4">
+    <div class="headline row ">
+        <div class="col-md-8">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, mollitia!
+        </div>
+       <div class="col-md-4">
+        <img src="./Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg" alt="" class=" headline-img">
+       </div> 
+        <hr class="mt-3">
+</div>
+
+<div class="headline row ">
+    <div class="col-md-8">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, mollitia!
+    </div>
+   <div class="col-md-4">
+    <img src="./Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg" alt="" class=" headline-img">
+   </div> 
+    <hr class="mt-3">
+</div>
+
+<div class="headline row ">
+<div class="col-md-8">
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, mollitia!
+</div>
+<div class="col-md-4">
+<img src="./Lionel-Messi-Argentina-2022-FIFA-World-Cup_(cropped).jpg" alt="" class=" headline-img">
+</div> 
+<hr class="mt-3">
+</div>
+
+</div>
+    
+    </section>
+
 </main>
 
+<footer class="mt-5 text-center container">
+    <hr>
+    Copyrights©️ 2023 : Siddhant Dudhane
+</footer>
 
 
 
