--- a/client/feed.html
+++ b/client/feed.html
@@ -14,7 +14,28 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    
+
+
+<!-----------------------------MODAL-------------------------------------------------->   
+
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Settings</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+<!------------X-----------------MODAL------------------------X-------------------------->
 <!--------------------------------NAVBAR-----------------------------------------------> 
 <nav class="navbar navbar-expand-lg" data-bs-theme="dark">
     <div class="container">
@@ -24,6 +45,8 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ms-auto logout">
+            
+            <a class="nav-link px-5" aria-current="page" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">Settings</a>
           <a class="nav-link" aria-current="page" href="#">Logout</a>
         </div>
       </div>
