--- a/client/feed.html
+++ b/client/feed.html
@@ -25,12 +25,24 @@
           <h1 class="modal-title fs-5" id="exampleModalLabel">Settings</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-        <div class="modal-body">
-          ...
+        <div class="modal-body ">
+          
+            <form action="" method="post">
+            <div class="topics">
+                <h5>Pick Your Topics</h5> <br>
+                <input type="checkbox" name="Technology" id="tech" class="badge"> <label for="tech">Technology</label>
+                <input type="checkbox" name="Sports" id="sports" class="badge"> <label for="sports">Sports</label>
+                <input type="checkbox" name="Politics" id="pol" class="badge"> <label for="pol">Politics</label>
+                <input type="checkbox" name="Economy" id="econ" class="badge"> <label for="econ">Economy</label>
+
+            </div>
+            </form>
+
+
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
+          <button type="button" class="btn btn-light">Save changes</button>
         </div>
       </div>
     </div>
