Add Select Location option to modal

--- a/client/feed.html
+++ b/client/feed.html
@@ -27,13 +27,64 @@
         </div>
         <div class="modal-body ">
           
-            <form action="" method="post">
+            <form action="" method="post" id="modal-form">
             <div class="topics">
-                <h5>Pick Your Topics</h5> <br>
+                <h5>Pick Your Topics</h5> 
                 <input type="checkbox" name="Technology" id="tech" class="badge"> <label for="tech">Technology</label>
                 <input type="checkbox" name="Sports" id="sports" class="badge"> <label for="sports">Sports</label>
                 <input type="checkbox" name="Politics" id="pol" class="badge"> <label for="pol">Politics</label>
                 <input type="checkbox" name="Economy" id="econ" class="badge"> <label for="econ">Economy</label>
+                <input type="checkbox" name="Health" id="health" class="badge"> <label for="health">Health</label>
+                <input type="checkbox" name="Entertainment" id="ent" class="badge"> <label for="ent">Entertainment</label>
+                <input type="checkbox" name="Education" id="edu" class="badge"> <label for="edu">Education</label>
+                <input type="checkbox" name="Environment" id="env" class="badge"> <label for="env">Environment</label>
+            </div>
+
+            <div class="location mt-5">
+                <h5>Select Location</h5>
+
+                <!--- India states -->
+<select id="country-state" name="country-state" class="form-control ms-0">
+    <option value="">Select state</option>
+    <option value="AN">Andaman and Nicobar Islands</option>
+    <option value="AP">Andhra Pradesh</option>
+    <option value="AR">Arunachal Pradesh</option>
+    <option value="AS">Assam</option>
+    <option value="BR">Bihar</option>
+    <option value="CH">Chandigarh</option>
+    <option value="CT">Chhattisgarh</option>
+    <option value="DN">Dadra and Nagar Haveli</option>
+    <option value="DD">Daman and Diu</option>
+    <option value="DL">Delhi</option>
+    <option value="GA">Goa</option>
+    <option value="GJ">Gujarat</option>
+    <option value="HR">Haryana</option>
+    <option value="HP">Himachal Pradesh</option>
+    <option value="JK">Jammu and Kashmir</option>
+    <option value="JH">Jharkhand</option>
+    <option value="KA">Karnataka</option>
+    <option value="KL">Kerala</option>
+    <option value="LA">Ladakh</option>
+    <option value="LD">Lakshadweep</option>
+    <option value="MP">Madhya Pradesh</option>
+    <option value="MH">Maharashtra</option>
+    <option value="MN">Manipur</option>
+    <option value="ML">Meghalaya</option>
+    <option value="MZ">Mizoram</option>
+    <option value="NL">Nagaland</option>
+    <option value="OR">Odisha</option>
+    <option value="PY">Puducherry</option>
+    <option value="PB">Punjab</option>
+    <option value="RJ">Rajasthan</option>
+    <option value="SK">Sikkim</option>
+    <option value="TN">Tamil Nadu</option>
+    <option value="TG">Telangana</option>
+    <option value="TR">Tripura</option>
+    <option value="UP">Uttar Pradesh</option>
+    <option value="UT">Uttarakhand</option>
+    <option value="WB">West Bengal</option>
+</select>
+
 
             </div>
             </form>
