--- a/client/feed.html
+++ b/client/feed.html
@@ -44,7 +44,7 @@
                 <h5>Select Location</h5>
 
                 <!--- India states -->
-<select id="country-state" name="country-state" class="form-control ms-0">
+<select id="country-state" name="country-state" class="form-control ms-0 mt-4">
     <option value="">Select state</option>
     <option value="AN">Andaman and Nicobar Islands</option>
     <option value="AP">Andhra Pradesh</option>
@@ -92,8 +92,8 @@
 
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-light">Save changes</button>
+          <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-dark">Save changes</button>
         </div>
       </div>
     </div>
